# ChangeLog for media-sound/mp3diags
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mp3diags-0.99.05.032 (24 Aug 2009)

  24 Aug 2009; Dominik Kapusta <d@ayoy.net> -mp3diags-0.99.05.031.ebuild,
  +mp3diags-0.99.05.032.ebuild:
  Version bump, remove old.

  20 Aug 2009; Dominik Kapusta <d@ayoy.net> mp3diags-0.99.05.031.ebuild,
  mp3diags-9999.ebuild:
  Corrected RDEPEND to include qt-svg.

*mp3diags-0.99.05.031 (19 Aug 2009)

  19 Aug 2009; Dominik Kapusta <d@ayoy.net> -mp3diags-0.99.05.030.ebuild,
  +mp3diags-0.99.05.031.ebuild:
  Version bump, remove old.

  15 Aug 2009; Markos Chandras <hwoarang@gentoo.org> mp3diags-9999.ebuild:
  Don't use https for svn checkout

*mp3diags-0.99.05.030 (31 Jul 2009)

  31 Jul 2009; Dominik Kapusta <d@ayoy.net> -mp3diags-0.99.05.029.ebuild,
  +mp3diags-0.99.05.030.ebuild:
  Version bump, remove old. Changed SRC_URI.

*mp3diags-0.99.05.029 (28 Jul 2009)

  28 Jul 2009; Dominik Kapusta <d@ayoy.net> -mp3diags-0.99.04.026.ebuild,
  +mp3diags-0.99.05.029.ebuild, mp3diags-9999.ebuild:
  Version bump, remove old. Added doc USE flag to non-live ebuild.

*mp3diags-0.99.04.026 (21 Jul 2009)

  21 Jul 2009; Dominik Kapusta <d@ayoy.net> -mp3diags-0.99.03.022.ebuild,
  +mp3diags-0.99.04.026.ebuild:
  Version bump

*mp3diags-0.99.03.022 (13 Jul 2009)

  13 Jul 2009; Dominik Kapusta <d@ayoy.net> -mp3diags-0.99.02.020.ebuild,
  +mp3diags-0.99.03.022.ebuild:
  Version bump

*mp3diags-0.99.02.020 (08 Jul 2009)

  08 Jul 2009; Dominik Kapusta <d@ayoy.net> -mp3diags-0.99.02.018.ebuild,
  +mp3diags-0.99.02.020.ebuild:
  Version bump

  29 Jun 2009; Dominik Kapusta <d@ayoy.net> mp3diags-0.99.02.018.ebuild,
  mp3diags-9999.ebuild:
  Fixed license

*mp3diags-9999 (27 Jun 2009)
*mp3diags-0.99.02.018 (27 Jun 2009)

  27 Jun 2009; Dominik Kapusta <d@ayoy.net> +mp3diags-0.99.02.018.ebuild,
  +mp3diags-9999.ebuild, +metadata.xml:
  Initial commit
