@@ -1,6 +1,6 @@
-DIST MP3Diags-0.99.05.032.tar.gz 896354 RMD160 c613a295baa9f0f72fc809e3f3816dbdca3b3726 SHA1 1f1cc29ff5eee9731b874cd497bd5832dc39464e SHA256 935fbe91859c1dcaca18c91bbab9d020602c98af67c9561019da97463f0f8c86
-DIST MP3Diags_Src+Doc-0.99.05.032.tar.gz 2600036 RMD160 e086e3d6f17cff7dedd0ef68b16ab3dc89b0cd3a SHA1 bb6b670ac635968ead737816e4abc3ab544b1e25 SHA256 faa8ec7be258864d34f39d31b33d849b97e9d5b0e527c25814fbe8bb0e51768e
-EBUILD mp3diags-0.99.05.032.ebuild 1115 RMD160 329becadf4c23f8970e617371c1514f17538d54f SHA1 c13d8172f17a975e85eb7bcbba6b6bd49b996ec6 SHA256 6be95ccc879feb55ab3230ba2c5d7ada3c810b3042686bcc99953dea8cec892b
-EBUILD mp3diags-9999.ebuild 1093 RMD160 9415c484909d877a83456bdb3a1b34fbadae6d02 SHA1 323beb615ee6120c86e3f137b5e3572de347b6a7 SHA256 7ec535a0a71bfec0d294d889e2a363676031e92164cfe6b958598964567c4352
-MISC ChangeLog 1924 RMD160 547db6f9b9a8fb968dac5aaf23baf2aed0865cb5 SHA1 a7b65a7294fc361e6e01a686e5f8e548c331e7f1 SHA256 c48a1ee53b7f2debfc2fa5934dce4399db5f3a86ea8d89289b6c60b2125c8875
+DIST MP3Diags-0.99.05.034.tar.gz 909391 RMD160 5d76487304b99aa540ad1482507343f3d085c290 SHA1 b9b39883e58bd6aa34a47f6c69ec4aa4864d3459 SHA256 a2c5c1a89ebf9b695136624f02d9f382f5bdb889187e0b70496f8e2f5f560e57
+DIST MP3Diags_Src+Doc-0.99.05.034.tar.gz 2615259 RMD160 37b4f74c22ff1cfb9b7af3cd3825a31a105dc7b1 SHA1 d8d1bcd2e12a55b5a807e0aa69156b6cd664d749 SHA256 741f429f10629d6c40b211f0e5eef3f2d8c363f1a936f57af8c01fcf29bc0559
+EBUILD mp3diags-0.99.05.034.ebuild 1121 RMD160 e6cec1345a1a2fdaca9082aa042484db8a85e29b SHA1 778a66c8935165eed68d5fa55b087a089c7b0e09 SHA256 b682ca47677418390d90f923d74a4b9c27b18917e8256b37d2f73f0141e49fc1
+EBUILD mp3diags-9999.ebuild 1119 RMD160 18e51364d5d2a0bea73c222c81a9c6ce5f42fa98 SHA1 0137478fa6b9b14caa3f0e84d84f8037190fc36b SHA256 87a1d802d94a08d50612a39eff55b437fa47d52b4303cfa878c6449c151dbcbe
+MISC ChangeLog 2138 RMD160 ffbe5559d34c57b2f266281adaec390e2e678578 SHA1 1d65fcf6cbf930ac16a9550f7ec02cb9fbec6652 SHA256 bc2e98e5d9f86f20959f04dd90858d459b0a56fddb46e88c4522d0461c44dbe7
 MISC metadata.xml 294 RMD160 a876c02ee69404aba92cd94beed6a238e0043581 SHA1 ac44a6cbf847ec1a492eaecbb7ffd6bce60a380d SHA256 43aeca91b633f1d854fba6e201a4321e46e96e4549361330926ea0e522cc00ba
