@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mp3diags-0.99.05.034 (07 Sep 2009)
+
+  07 Sep 2009; Dominik Kapusta <d@ayoy.net> -mp3diags-0.99.05.032.ebuild,
+  +mp3diags-0.99.05.034.ebuild, mp3diags-9999.ebuild:
+  Version bump, remove old, updated live ebuild
+
 *mp3diags-0.99.05.032 (24 Aug 2009)
 
   24 Aug 2009; Dominik Kapusta <d@ayoy.net> -mp3diags-0.99.05.031.ebuild,
